@@ -43,21 +43,6 @@ public class JpmsConfiguration {
 
     public static final List<String> GRADLE_DAEMON_JPMS_ARGS;
 
-    public static final List<String> gradleDaemonJpmsArgs(List<String> existingJvmArgs) {
-        List<String> result = new ArrayList<String>(GRADLE_DAEMON_JPMS_ARGS);
-
-        String kotlinCompilerOptions = null;
-        for (String jvmArg : existingJvmArgs) {
-            if (jvmArg.startsWith("-Dkotlin.daemon.jvm.options=")) {
-                kotlinCompilerOptions = jvmArg.substring(28);
-            }
-        }
-        if (kotlinCompilerOptions != null) {
-            result.add(result.size() - 1, "-Dkotlin.daemon.jvm.options=--illegal-access=permit " + kotlinCompilerOptions);
-        }
-        return result;
-    }
-
     static {
         List<String> gradleDaemonJvmArgs = new ArrayList<String>();
         gradleDaemonJvmArgs.addAll(GROOVY_JPMS_ARGS);
@@ -69,10 +54,6 @@ public class JpmsConfiguration {
             "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED" // serialized from org.gradle.internal.file.StatStatistics$Collector
         ));
         gradleDaemonJvmArgs.addAll(configurationCacheJpmsArgs);
-
-        // Workaround until external kotlin-dsl plugins support JDK16 properly
-        // https://youtrack.jetbrains.com/issue/KT-43704 - should be in 1.5.x line
-        gradleDaemonJvmArgs.add("-Dkotlin.daemon.jvm.options=--illegal-access=permit");
 
         GRADLE_DAEMON_JPMS_ARGS = Collections.unmodifiableList(gradleDaemonJvmArgs);
     }
